feedback step 3 - social media user profile update
