# storage/docs/api-docs.json
@@ -4,7 +4,7 @@
         "title": "Laravel Generator APIs",
         "version": "1.0.0"
     },
-    "basePath": "CaristoCratApp/api/v1",
+    "basePath": "/CaristoCratApp/api/v1",
     "paths": {
         "/register": {
             "post": {
@@ -4177,6 +4177,14 @@
                         "description": "id of User",
                         "required": true,
                         "type": "integer"
+                    },
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "User Auth Token{ Bearer ABC123 }",
+                        "required": true,
+                        "type": "string",
+                        "default": "Bearer ABC123"
                     }
                 ],
                 "responses": {
